# inxi-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.it.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/inxi-cli/: Cargo.toml
crates/inxi-cli/src/: main.rs
crates/inxi-core/: Cargo.toml
crates/inxi-core/src/: capabilities.rs  collectors.rs  command.rs  lib.rs  model.rs  planner.rs  render.rs  request.rs  safety.rs  self_check.rs  util.rs
crates/inxi-core/src/collectors/: base.rs  graphics.rs  network.rs  storage.rs
crates/inxi-core/tests/: golden_outputs.rs
crates/inxi-core/tests/fixtures/: ip-brief-address.txt  lsblk.json  lspci-mm.txt  proc-if_inet6.txt  proc-mounts.txt  proc-partitions.txt  xrandr-query.txt
crates/inxi-core/tests/golden/: report.json  report.screen.txt  self-check.json  self-check.screen.txt
docs/en/: architecture.md  compatibility.md  index.md  roadmap.md  safety.md  v1-scope.md  why-rust.md
docs/en/releases/: 0.1.0-alpha.1.md
docs/it/: index.md  panoramica.md  perche-rust.md  roadmap.md  sicurezza.md
docs/it/releases/: 0.1.0-alpha.1.md
docs/it/research/: README.md  inxi-cli-contract.md  inxi-clone-spec.md  inxi-compatibility-review.md  inxi-json-contract.md  inxi-language-evaluation.md  inxi-multi-host-comparison-procedure.md  inxi-reverse-engineering.md  inxi-rust-bootstrap.md  inxi-safety-policy.md  inxi-stabilization-roadmap.md  inxi-v1-matrix.md
