[workspace]
members = ["crates/inxi-core", "crates/inxi-cli"]
resolver = "2"

[workspace.package]
authors = ["Simmaco Di Maio"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/sdimaio/inxi-rs"
homepage = "https://github.com/sdimaio/inxi-rs"
rust-version = "1.85"
version = "0.1.0-alpha.1"

[workspace.dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.38", features = ["derive"] }
libc = "0.2.174"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
