[package]
name = "inxi-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless collection core for inxi-rs, a read-only Rust system information tool."
readme = "../../README.md"
keywords = ["linux", "system-information", "json", "telemetry", "inxi"]
categories = ["command-line-utilities"]

[dependencies]
chrono.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
